test.output
Gramática

    0 $accept: prog $end

    1 prog: stmts

    2 stmts: %empty
    3      | stmt SEMICOLON stmts

    4 stmt: STRING
    5     | NUM
    6     | OTHER


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    STRING <name> (258) 4
    NUM <number> (259) 5
    OTHER (260) 6
    SEMICOLON (261) 3


No terminales con las reglas donde aparecen

    $accept (7)
        on left: 0
    prog (8)
        on left: 1
        on right: 0
    stmts (9)
        on left: 2 3
        on right: 1 3
    stmt (10)
        on left: 4 5 6
        on right: 3


Estado 0

    0 $accept: • prog $end

    STRING  desplazar e ir al estado 1
    NUM     desplazar e ir al estado 2
    OTHER   desplazar e ir al estado 3

    $default  reduce usando la regla 2 (stmts)

    prog   ir al estado 4
    stmts  ir al estado 5
    stmt   ir al estado 6


Estado 1

    4 stmt: STRING •

    $default  reduce usando la regla 4 (stmt)


Estado 2

    5 stmt: NUM •

    $default  reduce usando la regla 5 (stmt)


Estado 3

    6 stmt: OTHER •

    $default  reduce usando la regla 6 (stmt)


Estado 4

    0 $accept: prog • $end

    $end  desplazar e ir al estado 7


Estado 5

    1 prog: stmts •

    $default  reduce usando la regla 1 (prog)


Estado 6

    3 stmts: stmt • SEMICOLON stmts

    SEMICOLON  desplazar e ir al estado 8


Estado 7

    0 $accept: prog $end •

    $default  aceptar


Estado 8

    3 stmts: stmt SEMICOLON • stmts

    STRING  desplazar e ir al estado 1
    NUM     desplazar e ir al estado 2
    OTHER   desplazar e ir al estado 3

    $default  reduce usando la regla 2 (stmts)

    stmts  ir al estado 9
    stmt   ir al estado 6


Estado 9

    3 stmts: stmt SEMICOLON stmts •

    $default  reduce usando la regla 3 (stmts)
